--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: monitoring
+  name: default
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: monitoring
-  namespace: monitoring
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: monitoring
-  namespace: monitoring
+  namespace: default
 rules:
 - apiGroups: [""]
   resources:
@@ -37,7 +37,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: monitoring
-    namespace: monitoring
+    namespace: default
 roleRef:
   kind: ClusterRole
   name: monitoring
