--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: v1
 kind: Service
 metadata: 
@@ -8,6 +7,7 @@ metadata:
     prometheus.io/port: "9090"
   labels:
     name: prometheus
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   selector: 
     statefulset.kubernetes.io/pod-name: prometheus-0
@@ -38,6 +38,7 @@ kind: Service
 metadata:
   labels:
     app: prometheus-api-grpc
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
   name: prometheus-api-grpc
 spec:
   selector:
@@ -56,6 +57,7 @@ kind: Service
 metadata:
   labels:
     app: prometheus-api-store
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
   name: prometheus-api-store
 spec:
   selector:
