--- a/templates/kubestate-metrics.yml
+++ b/templates/kubestate-metrics.yml
@@ -150,6 +150,7 @@ metadata:
   name: kube-state-metrics
   labels:
     k8s-app: kube-state-metrics
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
   annotations:
     prometheus.io/scrape: 'true'
     prometheus.io/port: "8080"
