--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -7,7 +7,7 @@ metadata:
     prometheus.io/port: "9090"
   labels:
     name: prometheus
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/managed-by: Helm
 spec:
   selector: 
     statefulset.kubernetes.io/pod-name: prometheus-0
@@ -38,7 +38,7 @@ kind: Service
 metadata:
   labels:
     app: prometheus-api-grpc
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/managed-by: Helm
   name: prometheus-api-grpc
 spec:
   selector:
