--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -8,17 +8,37 @@ metadata:
 data:
   prometheus.yaml.tmpl: |-
     global:
-      scrape_interval: 5s
-      evaluation_interval: 5s
+      scrape_interval: 10s
+      evaluation_interval: 10s
       external_labels:
         cluster: prometheus-ha
         # Each Prometheus has to have unique labels.
         replica: $(POD_NAME)
 
+    rule_files:
+      - /etc/prometheus/rules/*rules.yaml
+
+
+    #alerting:
+      #alertmanagers:
+      #- scheme: http
+        #path_prefix: /
+        #static_configs:
+         #- targets: ['alertmanager:9093']
+
     scrape_configs:
-    - job_name: prometheus
+    #- job_name: 'prometheus'
+      #scrape_interval: 10s
+      #static_configs:
+        #- targets: ['localhost:9090']
+
+    - job_name: 'node-exporter'
+      scrape_interval: 10s
       static_configs:
-        - targets: ['localhost:9090']
+        - targets: ['localhost:9100']
+
+
+    - job_name: kubernetes-nodes-cadvisor
       scrape_interval: 10s
       scrape_timeout: 10s
       scheme: https
@@ -49,8 +69,9 @@ data:
           regex: '^/system\.slice/(.+)\.service$'
           target_label: systemd_service_name
           replacement: '${1}'
-
+    
     - job_name: 'kubernetes-pods'
+      metrics_path: /metrics
       kubernetes_sd_configs:
         - role: pod
       relabel_configs:
@@ -79,19 +100,14 @@ data:
           regex: ([^:]+)(?::\d+)?;(\d+)
           replacement: $1:$2
 
-
-    - job_name: 'kubernetes-apiservers'
-      kubernetes_sd_configs:
-        - role: endpoints
-      scheme: https 
-      tls_config:
-        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-      relabel_configs:
-        - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
-          action: keep
-          regex: default;kubernetes;https
-
+    - job_name: 'kube-state-metrics'
+      metrics_path: /metrics
+      scheme: http
+      static_configs:
+        - targets: ['localhost:8080']
+      metric_relabel_configs:
+        - target_label: cluster
+     
     - job_name: 'kubernetes-service-endpoints'
       kubernetes_sd_configs:
         - role: endpoints
@@ -119,7 +135,7 @@ data:
           action: replace
           target_label: __address__
           regex: (.+)(?::\d+);(\d+)
-          replacement: $1:$2
+          replacement: $1:$2 
 ---
 apiVersion: v1
 kind: ConfigMap
