--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -147,89 +147,67 @@ metadata:
 data:
   alert-rules.yaml: |-
     groups:
-      - name: Deployment
-        rules:
-        - alert: Deployment at 0 Replicas
-          annotations:
-            summary: Deployment {{.Values.label.deployment}} in {{.Values.label.namespace}} is currently having no pods running
-          expr: |
-            sum(kube_deployment_status_replicas{pod_template_hash=""}) by (deployment,namespace)  &lt; 1
-          for: 1m
-          labels:
-            team: devops
-
-        - alert: HPA Scaling Limited  
-          annotations: 
-            summary: HPA named {{.Values.label.hpa}} in {{.Values.label.namespace}} namespace has reached scaling limited state
-          expr: | 
-            (sum(kube_hpa_status_condition{condition="ScalingLimited",status="true"}) by (hpa,namespace)) == 1
-          for: 1m
-          labels: 
-            team: devops
-
-        - alert: HPA at MaxCapacity 
-          annotations: 
-            summary: HPA named {{.Values.label.hpa}} in {{.Values.label.namespace}} namespace is running at Max Capacity
-          expr: | 
-            ((sum(kube_hpa_spec_max_replicas) by (hpa,namespace)) - (sum(kube_hpa_status_current_replicas) by (hpa,namespace))) == 0
-          for: 1m
-          labels: 
-            team: devops
-
-      - name: Pods
-        rules:
-        - alert: Container restarted
-          annotations:
-            summary: Container named {{.Values.label.container}} in {{.Values.label.pod}} in {{.Values.label.namespace}} was restarted
-          expr: |
-            sum(increase(kube_pod_container_status_restarts_total{namespace!="kube-system",pod_template_hash=""}[1m])) by (pod,namespace,container) &gt; 0
-          for: 0m
-          labels:
-            team: dev
-
-        - alert: High Memory Usage of Container 
-          annotations: 
-            summary: Container named {{.Values.label.container}} in {{.Values.label.pod}} in {{.Values.label.namespace}} is using more than 75% of Memory Limit
-          expr: | 
-            ((( sum(container_memory_usage_bytes{image!="",container_name!="POD", namespace!="kube-system"}) by (namespace,container_name,pod_name)  / sum(container_spec_memory_limit_bytes{image!="",container_name!="POD",namespace!="kube-system"}) by (namespace,container_name,pod_name) ) * 100 ) &lt; +Inf ) &gt; 75
-          for: 5m
-          labels: 
-            team: dev
-
-        - alert: High CPU Usage of Container 
-          annotations: 
-            summary: Container named {{.Values.label.container}} in {{.Values.label.pod}} in {{.Values.label.namespace}} is using more than 75% of CPU Limit
-          expr: | 
-            ((sum(irate(container_cpu_usage_seconds_total{image!="",container_name!="POD", namespace!="kube-system"}[30s])) by (namespace,container_name,pod_name) / sum(container_spec_cpu_quota{image!="",container_name!="POD", namespace!="kube-system"} / container_spec_cpu_period{image!="",container_name!="POD", namespace!="kube-system"}) by (namespace,container_name,pod_name) ) * 100)  &gt; 75
-          for: 5m
-          labels: 
-            team: dev
-
-      - name: Nodes
-        rules:
-        - alert: High Node Memory Usage
-          annotations:
-            summary: Node {{.Values.label.kubernetes_io_hostname}} has more than 80% memory used. Plan Capcity
-          expr: |
-            (sum (container_memory_working_set_bytes{id="/",container_name!="POD"}) by (kubernetes_io_hostname) / sum (machine_memory_bytes{}) by (kubernetes_io_hostname) * 100) &gt; 80
-          for: 5m
-          labels:
-            team: devops
-
-        - alert: High Node CPU Usage
-          annotations:
-            summary: Node {{.Values.label.kubernetes_io_hostname}} has more than 80% allocatable cpu used. Plan Capacity.
-          expr: |
-            (sum(rate(container_cpu_usage_seconds_total{id="/", container_name!="POD"}[1m])) by (kubernetes_io_hostname) / sum(machine_cpu_cores) by (kubernetes_io_hostname)  * 100) &gt; 80
-          for: 5m
-          labels:
-            team: devops
-
-        - alert: High Node Disk Usage
-          annotations:
-            summary: Node {{.Values.label.kubernetes_io_hostname}} has more than 85% disk used. Plan Capacity.
-          expr: |
-            (sum(container_fs_usage_bytes{device=~"^/dev/[sv]d[a-z][1-9]$",id="/",container_name!="POD"}) by (kubernetes_io_hostname) / sum(container_fs_limit_bytes{container_name!="POD",device=~"^/dev/[sv]d[a-z][1-9]$",id="/"}) by (kubernetes_io_hostname)) * 100 &gt; 85
-          for: 5m
-          labels:
-            team: devops
+    - name: custom_rules
+      rules:
+        - record: node_memory_MemFree_percent
+          expr: 100 - (100 * node_memory_MemFree_bytes / node_memory_MemTotal_bytes)
+        - record: node_filesystem_free_percent
+          expr: 100 * node_filesystem_free_bytes{mountpoint="/"} / node_filesystem_size_bytes{mountpoint="/"}
+    - name: alert_rules
+      rules:
+      - alert: service_down
+        expr: up == 0
+        for: 10s
+        labels:
+          severity: critical
+          service: Platform
+          correlate: service_down
+        annotations: 
+          summary: "Instance [{{ $labels.instance }}] down"
+          value: DOWN ({{ $value }})
+          description: "[{{ $labels.instance }}] of job [{{ $labels.job }}] has been down for more than 1 minute."
+      
+      - alert: APIHighInvocationRate
+        expr: sum(rate(gateway_function_invocation_total{code="200"}[2s])) BY (function_name) > 0
+        for: 5s
+        labels:
+          service: gateway
+          severity: major
+        annotations:
+          description: High invocation total on {{ $labels.function_name }}
+          summary: High invocation total on {{ $labels.function_name }}
+  
+      - alert: PrometheusAllTargetsMissing
+        expr: count by (job) (up) == 0
+        for: 0m
+        labels:
+          severity: critical
+        annotations:
+          summary: Prometheus all targets missing (instance {{ $labels.instance }})
+          description: A Prometheus job does not have living target anymore{{ $value }} {{ $labels }}
+      
+      - alert: PrometheusTooManyRestarts
+        expr: changes(process_start_time_seconds{job=~"prometheus|pushgateway|alertmanager"}[2s]) > 0
+        for: 0m
+        labels:
+          severity: warning
+        annotations:
+          summary: Prometheus too many restarts (instance {{ $labels.instance }})
+          description: Prometheus has restarted more than twice in the last 15 minutes. It might be crashlooping. {{ $value }} {{ $labels }} 
+      - alert: HostOutOfMemory
+        expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 60
+        for: 1m
+        labels:
+          severity: warning
+        annotations:
+          summary: Host out of memory (instance {{ $labels.instance }})
+          description: Node memory is filling up (< 10% left){{ $value }} {{ $labels }} 
+     
+      - alert: HostOutOfDiskSpace
+        expr: (node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 1 and ON (instance, device, mountpoint) node_filesystem_readonly == 0
+        for: 2m
+        labels:
+          severity: warning
+        annotations:
+          summary: Host out of disk space (instance {{ $labels.instance }})
+          description: Disk is almost full (< 10% left){{ $value }} {{ $labels }}
