--- a/templates/kubestate-metrics.yml
+++ b/templates/kubestate-metrics.yml
@@ -10,7 +10,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 # kubernetes versions before 1.8.0 should use rbac.authorization.k8s.io/v1beta1
@@ -58,7 +58,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -66,7 +66,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 # kubernetes versions before 1.8.0 should use rbac.authorization.k8s.io/v1beta1
@@ -89,13 +89,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     matchLabels:
@@ -109,7 +109,7 @@ spec:
       serviceAccountName: kube-state-metrics
       containers:
       - name: kube-state-metrics
-        image: quay.io/mxinden/kube-state-metrics:v1.4.0-gzip.3
+        image: {{ .Values.kubestatemetrics.image }}
         ports:
         - name: http-metrics
           containerPort: 8080
@@ -122,14 +122,14 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 5
       - name: addon-resizer
-        image: k8s.gcr.io/addon-resizer:1.8.3
+        image: {{ .Values.kubestatemetrics.addonresizer.image }}
         resources:
           limits:
-            cpu: 150m
-            memory: 50Mi
+            cpu: {{ .Values.kubestatemetrics.resources.limits.cpu }}
+            memory: {{ .Values.kubestatemetrics.resources.limits.memory }}
           requests:
-            cpu: 150m
-            memory: 50Mi
+            cpu: {{ .Values.kubestatemetrics.resources.requests.cpu }}
+            memory: {{ .Values.kubestatemetrics.resources.requests.memory }}
         env:
           - name: MY_POD_NAME
             valueFrom:
@@ -153,7 +153,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
   labels:
     k8s-app: kube-state-metrics
   annotations:
