--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -1,8 +1,8 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: manual
-  namespace: monitoring
+  name: {{ .Values.storageclass.name }}
+  namespace: {{ .Values.namespace }}
 provisioner: kubernetes.io/no-provisioner
 allowVolumeExpansion: true
 mountOptions:
@@ -14,34 +14,34 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: prom-pv
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
   labels:
     type: local
 spec:
   accessModes: [ "ReadWriteOnce" ]
-  storageClassName: manual
+  storageClassName: {{ .Values.storageclass.name }}
   capacity:
-    storage: 20Gi
+    storage: {{ .Values.storageclass.capacity }}
   persistentVolumeReclaimPolicy: Recycle
   claimRef:
-    namespace: monitoring
+    namespace: {{ .Values.namespace }}
     name: prom-pvc-claim
   hostPath:
-    path: "/home/airvana/deeraj/"
+    path: {{ .Values.storageclass.hostpath }}
 ---
 
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: prom-pvc-claim
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
 spec:
-  storageClassName: manual
+  storageClassName: {{ .Values.storageclass.name }}
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 3Gi
+      storage: {{ .Values.storageclass.resources.requests.storage }}
 ---
 
 
@@ -49,7 +49,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: prometheus
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: 1
   selector:
@@ -65,7 +65,7 @@ spec:
       serviceAccountName: monitoring
       containers:
         - name: prometheus 
-          image: prom/prometheus:v2.4.3
+          image: {{ .Values.statefulset.prometheus.image }}
           args:
             - "--config.file=/etc/prometheus-shared/prometheus.yaml"
             - "--storage.tsdb.path=/prometheus/"
@@ -82,7 +82,7 @@ spec:
             - name: prometheus-config-shared
               mountPath: /etc/prometheus-shared/
         - name: thanos
-          image: quay.io/thanos/thanos:v0.8.0
+          image: {{ .Values.statefulset.thanos.image }}
           args:
             - "sidecar"
             - "--log.level=debug"
